2009-12-21  Enrica Casucci  <enrica@apple.com>

        Reviewed by Maciej Stachowiak.

        REGRESSION(4.0.4-ToT): Indent deletes non highlighted text in gmail.
        <rdar://problem/7489326>
        https://bugs.webkit.org/show_bug.cgi?id=32843
        
        The fix for 7442387 did not handle the case where the end of paragraph
        is not a descendant of the computed outer block.
        Updated editing/execCommand/indent-with-style2.html to cover this case too.

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::cloneParagraphUnderNewElement): 

2009-12-21  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=32831
        Replace UString::Rep implementation, following introduction of ropes to JSC.

        * ForwardingHeaders/runtime/UStringImpl.h: Added.
            - add forwarding header.

        * platform/text/StringImpl.cpp:
        (WebCore::StringImpl::ustring):
            - order of arguments to UString::Rep constructor for shared strings changed.

2009-12-18  Nate Chapin  <japhet@chromium.org>

        Reviewed by Adam barth.

        Generate V8 bindings non-constructor callback declarations 
        in CodeGeneratorV8.pm instead of manually declaring them in
        V8CustomBinding.h.

        https://bugs.webkit.org/show_bug.cgi?id=32638

        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/V8DOMWrapper.cpp:
        * bindings/v8/custom/V8AbstractWorkerCustom.cpp:
        * bindings/v8/custom/V8CanvasRenderingContext2DCustom.cpp:
        * bindings/v8/custom/V8ClipboardCustom.cpp:
        * bindings/v8/custom/V8ConsoleCustom.cpp:
        * bindings/v8/custom/V8CustomBinding.h:
        * bindings/v8/custom/V8DOMApplicationCacheCustom.cpp:
        * bindings/v8/custom/V8DOMParserConstructor.cpp:
        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        * bindings/v8/custom/V8DatabaseCustom.cpp: